# ETF-OOP1-Cpp-CLI

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/commands/: batch.cpp  batch.hpp  command.cpp  command.hpp  commands.hpp  date.cpp  date.hpp  echo.cpp  echo.hpp  head.cpp  head.hpp  iscommand.cpp  iscommand.hpp  oscommand.cpp  oscommand.hpp  prompt.cpp  prompt.hpp  rm.cpp  rm.hpp  time.cpp  time.hpp  touch.cpp  touch.hpp  tr.cpp  tr.hpp  truncate.cpp  truncate.hpp  wc.cpp  wc.hpp
src/core/: commandline.cpp  commandline.hpp  constants.hpp  controller.cpp  controller.hpp
src/utils/: constants.hpp  exceptions.hpp  reader.cpp  reader.hpp  translator.cpp  translator.hpp  writer.cpp  writer.hpp
